--- a/splaylist.WASM/Properties/launchSettings.json
+++ b/splaylist.WASM/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:51660/",
-      "sslPort": 0
+      "applicationUrl": "http://localhost:48609",
+      "sslPort": 44374
     }
   },
   "profiles": {
@@ -15,13 +15,13 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "splaylist": {
+    "splaylist.WASM": {
       "commandName": "Project",
       "launchBrowser": true,
+      "applicationUrl": "https://localhost:46286;http://localhost:54153",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "applicationUrl": "http://localhost:51660/"
+      }
     }
   }
 }
